tests/rosetta/out/Rust/call-a-foreign-language-function.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/call-a-foreign-language-function.rs:4:16
  |
3 |     fn strdup(s: &'static str) -> &'static str {
  |                                   ------------ expected `&str` because of return type
4 |         return format!("{}{}", s, "");
  |                ^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
  |
  = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
