tests/rosetta/out/Rust/call-a-foreign-language-function.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn strdup(s: &'static str) -> &'static str {
        return format!("{}{}", s, "");
    }
    fn main() -> () {
        let go1 = "hello C";
        let c2 = strdup(go1);
        println!("{}", vec![format!("{}", c2)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
    main();
}
